fix body height on iphone

--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -58,7 +58,7 @@ html {
 
 body {
   @apply m-0 text-foreground relative bg-secondary select-none font-sans
-  overflow-hidden h-full;
+  overflow-hidden h-full!;
   font-size: var(--font-size);
 }
 
